[TPL_KAMELEON-ADMIN] Minor adjustments to component title to avoid overlapping toolbar

--- a/administrator/templates/kameleon/less/_toolbar.less
+++ b/administrator/templates/kameleon/less/_toolbar.less
@@ -42,14 +42,11 @@
 		right: 0;
 	}
 	.pagetitle {
-		display: inline-block;
+		display: block;
 		color: #333;
-		margin: 0 0 0 2.41803399em;
+		margin: 0 11em 0 2.41803399em;
 		padding: 1em 0;
-		white-space: nowrap;
 		text-align: left;
-		text-overflow: ellipsis;
-		overflow: hidden;
 
 		h2 {
 			margin: 0;
@@ -58,6 +55,9 @@
 			font-weight: 400;
 			letter-spacing: 0.15em;
 			text-transform: uppercase;
+			text-overflow: ellipsis;
+			overflow: hidden;
+			white-space: nowrap;
 		}
 		span,
 		small {
